--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
         <li>Motorcycles</li>
       </ol>
     </div>
-    <p><a href="contact_me.html">Contact Me</a></p>
+    <p><a href="/contact_me.html">Contact Me</a></p>
   </body>
 </html>
